# realtifysaas

./: .env.example  .env.prod.example  .env.staging.example  .gitattributes  .gitignore  .npmrc  CLAUDE.md  DECISIONS.md  PROGRESS.md  REFERENCE-MODULES.md  TZ-geoanalytics-uvecon-v2-commercial.md  docker-compose.yml  package.json  partner_api.yaml  pnpm-lock.yaml
apps/engine/: README.md  pyproject.toml
apps/engine/app/: __init__.py  config.py  db.py  main.py
apps/engine/app/api/: __init__.py  analytics.py  etl.py  geo.py  listings.py  reports.py  valuation.py
apps/engine/app/schemas/: __init__.py  billing.py  valuation.py
apps/engine/app/valuation/: __init__.py  comparative.py
apps/engine/bot/: __init__.py  main.py
apps/engine/etl/: __init__.py  aggregate.py  generate_listings.py  import_boundaries.py  load.py  pipeline.py  transform.py
apps/engine/etl/fixtures/: olx_sample.json
apps/engine/etl/sources/: __init__.py  base.py  domria.py  olx.py  prozorro.py  sample.py
apps/engine/tests/: test_boundaries.py  test_etl_sources.py  test_health.py  test_reports.py
apps/web/: eslint.config.mjs  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/web/src/: middleware.ts  payload-types.ts  (+1 more)
infra/: README.md
infra/apache/: realtify-staging.conf.template
infra/nginx/: realtify-staging.conf.template  realtify.conf
infra/pm2/: ecosystem.config.cjs  ecosystem.staging.cjs  ecosystem.staging.config.cjs
infra/scripts/: backup-db.sh  deploy-staging.sh  healthcheck.sh  restore-db.sh
infra/sql/: 00-init.sql  02-gis-admin.sql
(+162 files in other folders)
