[project]
name = "realtify-engine"
version = "0.0.0"
description = "Движок оценки, гео-API, публичный API, ETL и Telegram-бот (ТЗ §10)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "fpdf2>=2.8.1",
    "psycopg[binary]>=3.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
